[package]
name = "neolith"
version = "0.1.0"
authors = ["Jordan Yelloz <jordan@yelloz.me>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5"

[dependencies.nom]
version = "*"
features = ["alloc"]
