[package]
name = "neolith"
version = "0.1.0"
description = "Hotline protocol implementation"
homepage = "https://github.com/jyelloz/neolith"
repository = "https://github.com/jyelloz/neolith.git"
authors = ["Jordan Yelloz <jordan@yelloz.me>"]
edition = "2021"
license = "MIT"
default-run = "nlserver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-stream = "0.3"
bytes = "1"
console-subscriber = "0.1"
derive_more = "*"
dialoguer = "*"
encoding = "0.2"
enumset = { version = "*", features = ["serde"] }
four-cc = "*"
futures = "0.3"
magic = "0.13"
maplit = "1"
num_enum = "0.5"
pwhash = "1"
regex = "1"
serde = "*"
strum = { version = "*", features = ["derive"] }
thiserror = "*"
time = "0.3"
tokio = { version = "1", features = ["full", "tracing"] }
toml = "*"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.nom]
version = "*"
features = ["alloc"]
